syntax = "proto3";

import "cactus.proto";

option csharp_namespace = "Common.Services.Cactuses";
option java_package = "com.cacti.services.generated";
option java_multiple_files = true;

package services.cactuses;

service Cactuses {
  rpc TestConnection(TestConnectionRequest) returns (TestConnectionReply);
  rpc GetAll(GetAllCactusRequest) returns (GetAllCactusReply);
  rpc Update(UpdateCactusRequest) returns (UpdateCactusReply);
  rpc Delete(DeleteCactusRequest) returns (DeleteCactusReply);
}

message TestConnectionRequest {
	string test = 1;
}

message TestConnectionReply {
	string test = 1;
}

message GetAllCactusRequest {
	repeated sint64 ids = 1; 
}

message GetAllCactusReply {
	repeated objects.Cactus data = 1;
}

message UpdateCactusRequest {
	objects.Cactus data = 1;
}

message UpdateCactusReply {
	objects.Cactus data = 1;
}

message DeleteCactusRequest {
	sint64 id = 1;
}

message DeleteCactusReply {
	sint64 id = 1;
}

